# flits

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  compose.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  to_do_burst_analyzer.txt
.github/: dependabot.yml  release-please-config.json
.github/workflows/: docs.yml  merge-dependabot.yml  publish-image.yml  publish-package.yml  release.yml  security.yml  tests.yml
burst_analyzer/: __init__.py  __main__.py  models.py  session.py  settings.py
burst_analyzer/io/: __init__.py  filterbank.py
burst_analyzer/web/: __init__.py  app.py
docs/: PUBLISHING.md  TESTING.md  getting-started.md  guided-workflow.md  index.md  installation.md  spider.md
docs/analysis/: dm-optimization.md  localization.md  measurements.md  model-fitting.md  rm-synthesis.md  scattering-fits.md  temporal-spectral.md
docs/developer/: custom-readers.md  publishing.md  testing.md
docs/examples/: rmtools-LICENSE.txt  rmtools-reference-input.json  rmtools-reference-summary.json
docs/user-guide/: exports-and-snapshots.md  session-workflow.md  supported-formats.md
examples/: rmtools_reference_workflow.py
flits/: __init__.py  __main__.py  exports.py  fitburst_adapter.py  measurements.py  models.py  session.py  settings.py  signal.py  timing.py
flits/analysis/: __init__.py  localization.py  spectral.py
flits/analysis/dm_optimization/: __init__.py  core.py
flits/analysis/fitting/: __init__.py  fitburst_adapter.py
flits/analysis/morphology/: __init__.py  widths.py
flits/analysis/polarization/: __init__.py  rm_synthesis.py  workflow.py
flits/analysis/spectral/: __init__.py  core.py
flits/analysis/temporal/: __init__.py  core.py
flits/io/: __init__.py  chime.py  chime_hdf5_reader.py  errors.py  filterbank.py  psrfits.py  reader.py  sigproc.py  validation.py  your_reader.py
flits/web/: __init__.py  app.py
flits/web_static/: app.js  index.html  styles.css
scripts/spider/: build_spider_image.sh  import_spider_sif.sh  open_local_tunnel.sh  run_flits_job.sh
tests/: conftest.py  test_calibration.py  test_detection.py  test_dm_optimization.py  test_exports.py  test_fit_scattering.py  test_frequency_order.py  test_frontend_ui_safety.py  test_frontend_uncertainty_metadata.py  test_frontend_viewer_styles.py  test_io_plugin.py  test_io_readers.py  test_localization.py  test_measurements.py  test_model_fitting.py  test_polarization_workflow.py  test_preprocessing.py  test_preset_detection.py  test_rm_synthesis.py  test_session_io_smoke.py  test_session_smoke.py  test_session_snapshots.py  test_spectral_analysis.py  test_timing.py  test_web_api.py  test_width_analysis.py
tools/: verify_dmphase.py  verify_dmphase_real.py
web_static/: app.js  index.html  styles.css
