[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flits"
dynamic = ["version", "dependencies"]
description = "Browser-based FRB burst analysis software (SIGPROC, PSRFITS, CHIME/FRB HDF5)"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Dirk Kuiper" },
]
keywords = ["astronomy", "fast radio bursts", "FRB", "radio astronomy", "filterbank", "SIGPROC", "PSRFITS", "HDF5", "CHIME"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.scripts]
flits = "flits.web.app:main"

[project.entry-points."flits.readers"]
sigproc = "flits.io.your_reader:YourFilterbankReader"
psrfits = "flits.io.your_reader:YourFilterbankReader"
chime_hdf5 = "flits.io.chime_hdf5_reader:ChimeHdf5Reader"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3",
  "twine>=6.1",
]
docs = [
  "mkdocs-material>=9.6",
]

[project.urls]
Homepage = "https://github.com/DirkKuiper/flits"
Documentation = "https://github.com/DirkKuiper/flits#readme"
Issues = "https://github.com/DirkKuiper/flits/issues"
Releases = "https://github.com/DirkKuiper/flits/releases"
Repository = "https://github.com/DirkKuiper/flits"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["flits*"]

[tool.setuptools.dynamic]
version = { attr = "flits.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
flits = [
  "web_static/*.html",
  "web_static/*.css",
  "web_static/*.js",
  "web_static/vendor/*.js",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
